--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ numpydoc==0.9.1
 gunicorn==19.9.0
 torch==1.8.1+cpu 
 torchvision==0.9.1+cpu
-opencv-python==4.5.1.48
+opencv-python-headless==4.2.0.32
 openpyxl==3.0.0
